--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Your Website</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Your file css -->
+    <!-- My file css -->
     <link rel="stylesheet" type="text/css" href="/index.css">
     <!-- chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -212,6 +212,7 @@
                                                                 <div class="row align-items-center">
                                                                     <div class="col-md-12">
                                                                         <div class="description">
+                                                                            
                                                                             <!-- Different layout or content for non-logged-in users -->
                                                                             <h4>Thank you for using Mindgarden Today.
                                                                             </h4>
