--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,7 +4,7 @@
     <title>404 Page Not Found</title>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-     <!-- Your file css -->
+     <!-- My file css -->
      <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 <body>
