--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -6,7 +6,7 @@
     <title>Your Website</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Your file css -->
+    <!-- My file css -->
     <link rel="stylesheet" type="text/css" href="/landingpage.css">
     <!-- chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
