--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
   <title>Your Website</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Your file css -->
+  <!-- My file css -->
   <link rel="stylesheet" type="text/css" href="/signup.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
